Adjustments for demo

--- a/demo/index.html
+++ b/demo/index.html
@@ -14,29 +14,7 @@
     <header>
 
         <b-paper class="ribbon">
-            <svg
-            xmlns:dc="http://purl.org/dc/elements/1.1/"
-            xmlns:cc="http://creativecommons.org/ns#"
-            xmlns:rdf="http://www.w3.org/1999/02/22-rdf-syntax-ns#"
-            xmlns:svg="http://www.w3.org/2000/svg"
-            xmlns="http://www.w3.org/2000/svg"
-            viewBox="0 0 1080.4375 203.91251"
-            height="203.91251"
-            width="1080.4375"
-            xml:space="preserve"
-            version="1.1"
-            id="blackstone-logo-horz"><defs
-                id="defs6" /><g
-                transform="matrix(1.25,0,0,-1.25,0,203.9125)"
-                id="g10"><g
-                transform="scale(0.1,0.1)"
-                id="g12"><path
-                    id="path14"
-                    style="fill:#100f0d;fill-opacity:1;fill-rule:nonzero;stroke:none"
-                    d="M 92.9961,1569.85 C 207.246,1669.79 673.594,1650.77 882.773,1491.73 1108.71,1319.96 1082.03,1014.21 792.754,885.328 508.035,758.484 133.387,674.617 50.1172,992.809 -43.293,1349.73 7.15625,1494.75 92.9961,1569.85" /><path
-                    id="path16"
-                    style="fill:#100f0d;fill-opacity:1;fill-rule:nonzero;stroke:none"
-                    d="M 1096.22,425.41 C 1094.62,54.25 866.348,22.9883 590.43,6.76172 244.813,-13.5703 104.383,-1.41016 73.0469,235.531 44.0625,454.629 146.766,555.582 507.949,680.145 979.512,842.762 1097.42,702.789 1096.22,425.41" /></g></g></svg>
+            <img src="../logo.png">
         </b-paper>
 
         <div class="logo">
@@ -52,15 +30,15 @@
             <h1>Panels</h1>
 
             <div>
-                <a href="/#/view-1">Default Panel view</a>
+                <a href="#/view-1">Default Panel view</a>
             </div>
             
             <div>
-                <a href="/#/view-2">Custom toolbar style and button</a>
+                <a href="#/view-2">Custom toolbar style and button</a>
             </div>
 
             <div>
-                <a href="/#/view-2-small">Custom sizing and anchor</a>
+                <a href="#/view-2-small">Custom sizing and anchor</a>
             </div>
 
         </b-paper>
