Fixing build and adding favicons

--- a/demo/index.html
+++ b/demo/index.html
@@ -1,6 +1,12 @@
 <html>
 <head>
     <title>Blackstone UI</title>
+    
+    <link rel="icon" type="image/png" sizes="32x32" href="./favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="./favicon/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./favicon/favicon-16x16.png">
+    <link rel="shortcut icon" href="./favicon/favicon.ico?v2">
+
     <script src='./demo.js'></script>
     <link rel="stylesheet" type="text/css" href="style.less">
     <script>
