Attempting to fix

--- a/demo/index.html
+++ b/demo/index.html
@@ -36,15 +36,15 @@
             <h1>Panels</h1>
 
             <div>
-                <a href="#/view-1">Default Panel view</a>
+                <a href="/#/view-1">Default Panel view</a>
             </div>
             
             <div>
-                <a href="#/view-2">Custom toolbar style and button</a>
+                <a href="/#/view-2">Custom toolbar style and button</a>
             </div>
 
             <div>
-                <a href="#/view-2-small">Custom sizing and anchor</a>
+                <a href="/#/view-2-small">Custom sizing and anchor</a>
             </div>
 
         </b-paper>
