--- a/demo/index.html
+++ b/demo/index.html
@@ -28,6 +28,7 @@
         <div class="logo">
             <h1>Blackstone UI</h1>
             <p>Reusable web components for creating app interfaces</p>
+            <b-btn color="blue" lg onclick="location='./docs'">Documentation</b-btn>
         </div>
 
     </header>
