Update demo for mobile

--- a/demo/index.html
+++ b/demo/index.html
@@ -1,6 +1,11 @@
 <html>
 <head>
     <title>Blackstone UI</title>
+    <meta name="apple-mobile-web-app-title" content="Blackstone UI">
+    <meta http-equiv="cleartype" content="on" />
+    <meta name="MobileOptimized" content="width" />
+    <meta name="viewport" content="initial-scale=1, maximum-scale=1">
+    <meta name="HandheldFriendly" content="true" />
     
     <link rel="icon" type="image/png" sizes="32x32" href="./favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="96x96" href="./favicon/favicon-96x96.png">
