--- a/demo/index.html
+++ b/demo/index.html
@@ -12,6 +12,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="./favicon/favicon-16x16.png">
     <link rel="shortcut icon" href="./favicon/favicon.ico?v2">
 
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet">
     <script src='./demo.js'></script>
     <link rel="stylesheet" type="text/css" href="style.less">
     <script>
@@ -22,16 +23,18 @@
 </head>
 <body>
 
-    <a href="https://github.com/kjantzer/bui" class="github-corner" aria-label="View source on GitHub"><svg width="80" height="80" viewBox="0 0 250 250" style="fill:#fff; color:#2c3033; position: absolute; top: 0; border: 0; right: 0;" aria-hidden="true"><path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z"></path><path d="M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2" fill="currentColor" style="transform-origin: 130px 106px;" class="octo-arm"></path><path d="M115.0,115.0 C114.9,115.1 118.7,116.5 119.8,115.4 L133.7,101.6 C136.9,99.2 139.9,98.4 142.2,98.6 C133.8,88.0 127.5,74.4 143.8,58.0 C148.5,53.4 154.0,51.2 159.7,51.0 C160.3,49.4 163.2,43.6 171.4,40.1 C171.4,40.1 176.1,42.5 178.8,56.2 C183.1,58.6 187.2,61.8 190.9,65.4 C194.5,69.0 197.7,73.2 200.1,77.6 C213.8,80.2 216.3,84.9 216.3,84.9 C212.7,93.1 206.9,96.0 205.4,96.6 C205.1,102.4 203.0,107.8 198.3,112.5 C181.9,128.9 168.3,122.5 157.7,114.1 C157.9,116.9 156.7,120.9 152.7,124.9 L141.0,136.5 C139.8,137.7 141.6,141.9 141.8,141.8 Z" fill="currentColor" class="octo-body"></path></svg></a><style>.github-corner:hover .octo-arm{animation:octocat-wave 560ms ease-in-out}@keyframes octocat-wave{0%,100%{transform:rotate(0)}20%,60%{transform:rotate(-25deg)}40%,80%{transform:rotate(10deg)}}@media (max-width:500px){.github-corner:hover .octo-arm{animation:none}.github-corner .octo-arm{animation:octocat-wave 560ms ease-in-out}}</style>
+    <a href="https://github.com/kjantzer/bui" class="github-corner" aria-label="View source on GitHub"><svg width="80" height="80" viewBox="0 0 250 250" style="z-index: 100;fill:#fff; color:#233745; position: absolute; top: 0; border: 0; right: 0;" aria-hidden="true"><path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z"></path><path d="M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2" fill="currentColor" style="transform-origin: 130px 106px;" class="octo-arm"></path><path d="M115.0,115.0 C114.9,115.1 118.7,116.5 119.8,115.4 L133.7,101.6 C136.9,99.2 139.9,98.4 142.2,98.6 C133.8,88.0 127.5,74.4 143.8,58.0 C148.5,53.4 154.0,51.2 159.7,51.0 C160.3,49.4 163.2,43.6 171.4,40.1 C171.4,40.1 176.1,42.5 178.8,56.2 C183.1,58.6 187.2,61.8 190.9,65.4 C194.5,69.0 197.7,73.2 200.1,77.6 C213.8,80.2 216.3,84.9 216.3,84.9 C212.7,93.1 206.9,96.0 205.4,96.6 C205.1,102.4 203.0,107.8 198.3,112.5 C181.9,128.9 168.3,122.5 157.7,114.1 C157.9,116.9 156.7,120.9 152.7,124.9 L141.0,136.5 C139.8,137.7 141.6,141.9 141.8,141.8 Z" fill="currentColor" class="octo-body"></path></svg></a><style>.github-corner:hover .octo-arm{animation:octocat-wave 560ms ease-in-out}@keyframes octocat-wave{0%,100%{transform:rotate(0)}20%,60%{transform:rotate(-25deg)}40%,80%{transform:rotate(10deg)}}@media (max-width:500px){.github-corner:hover .octo-arm{animation:none}.github-corner .octo-arm{animation:octocat-wave 560ms ease-in-out}}</style>
 
     <header>
+
+        <div class="bgd"></div>
 
         <b-paper class="ribbon">
             <img src="../logo.png">
         </b-paper>
 
         <div class="logo">
-            <h1>Blackstone UI</h1>
+            <h1>Blackstone <span>UI</span></h1>
             <p><a href="https://developer.mozilla.org/en-US/docs/Web/Web_Components">Web components</a> for creating app interfaces – built using <a href="https://lit-html.polymer-project.org">lit-html</a> and <a href="https://lit-element.polymer-project.org">lit-element</a></p>
         </div>
 
@@ -40,13 +43,16 @@
     <main>
 
 
-        <b-paper compact><b-tabs key="main">
+        <b-paper compact><b-tabs key="main" style="padding-top: 1em">
 
-            <span slot="menu:after" style="margin: 0 .5em 0 auto; display: flex; align-items: center;" >
-                <b-btn color="black" onclick="location='https://www.npmjs.com/package/blackstone-ui'">Install</b-btn>
+            <span slot="menu:after" style="margin: 0 .75em 0 auto; display: flex; align-items: center;" >
+                <b-btn pill color="black" onclick="location='https://www.npmjs.com/package/blackstone-ui'">Install</b-btn>
                 &nbsp;&nbsp;
-                <b-btn color="blue" onclick="location='./docs'">Documentation</b-btn>
+                <b-btn pill color="blue" onclick="location='./docs'">Documentation</b-btn>
             </span>
+
+            <h2 slot="menu:Presenters"><b-icon name="window"></b-icon>Presenters</h2>
+            <h2 slot="menu:Elements"><b-icon name="code"></b-icon>Elements</h2>
 
             <b-tabs title="Presenters" key="presenters" layout="left" >
 
@@ -59,9 +65,19 @@
                             <text-field></text-field>
                         </form-control>
 
-                        <form-control material="filled" label="Date Field">
-                            <text-field type="date"></text-field>
-                        </form-control>
+                        <div class="cols-3">
+                            <form-control material="filled" label="Validate and prefix" prefix="$">
+                                <text-field validate="decimal"></text-field>
+                            </form-control>
+
+                            <form-control material="filled" label="Validate and suffix" suffix=" units">
+                                <text-field validate="int"></text-field>
+                            </form-control>
+
+                            <form-control material="filled" label="Date Field">
+                                <text-field type="date"></text-field>
+                            </form-control>
+                        </div>
 
                         <form-control material="filled" label="Text Field (Multiline)">
                             <text-field multiline></text-field>
@@ -69,20 +85,34 @@
 
                         <form-control material="filled" label="Rich Text Field">
                             <rich-text-field></rich-text-field>
+                            <span slot="help">Rich text editing is enabled using quill.js</span>
                         </form-control>
 
-                        <form-control material="filled" label="Select Field">
-                            <select-field>
-                                <option value="">No Value</option>
-                                <hr>
-                                <option value="1">Option 1</option>
-                                <option value="2">Option 2</option>
-                                <option value="3">Option 3</option>
-                                <optgroup>Group Title</optgroup>
-                                <option value="4">Option 4</option>
-                                <option value="5">Option 5</option>
-                            </select-field>
-                        </form-control>
+                        
+                        <div class="cols-2">
+                            <form-control material="filled" label="Select Field">
+                                <select-field>
+                                    <option value="">No Value</option>
+                                    <hr>
+                                    <option value="1">Option 1</option>
+                                    <option value="2">Option 2</option>
+                                    <option value="3">Option 3</option>
+                                    <optgroup>Group Title</optgroup>
+                                    <option value="4">Option 4</option>
+                                    <option value="5">Option 5</option>
+                                </select-field>
+                            </form-control>
+
+                            <form-control material="filled" label="Multi Select Field">
+                                <select-field multiple>
+                                    <option value="1">Option 1</option>
+                                    <option value="2">Option 2</option>
+                                    <option value="3">Option 3</option>
+                                    <option value="4">Option 4</option>
+                                    <option value="5">Option 5</option>
+                                </select-field>
+                            </form-control>
+                        </div>
 
                     </form-handler>
 
@@ -95,6 +125,31 @@
                         <radio-btn label="One"></radio-btn>
                         <radio-btn label="Two"></radio-btn>
                     </radio-group>
+
+                    <br><br>
+
+
+                    <div>
+                        Standard&nbsp;&nbsp;&nbsp;&nbsp;
+                        <range-slider></range-slider>
+                    </div>
+
+                    <div>
+                        Range&nbsp;&nbsp;&nbsp;&nbsp;
+                        <range-slider range></range-slider>
+                    </div>
+
+                    <div>
+                        Stepped&nbsp;&nbsp;&nbsp;&nbsp;
+                        <range-slider step=10 value=0></range-slider>
+                    </div>
+
+                    <div>
+                        Styled&nbsp;&nbsp;&nbsp;&nbsp;
+                        <range-slider class="bigger"></range-slider>
+                    </div>
+
+
                 </section>
 
                 <section title="Dialog">
@@ -292,12 +347,23 @@
                 <section title="Avatar">
                     <h1>Avatar</h1>
 
+                    <b-label divider>Initials</b-label><br>
+                    <b-avatar initials="AB" size="40"></b-avatar>
+                    <b-avatar initials="GT" size="40"></b-avatar>
+                    <b-avatar initials="ND" size="40"></b-avatar>
                     <b-avatar initials="KJ" size="40"></b-avatar>
                     <b-avatar initials="BT" size="40"></b-avatar>
                     <b-avatar initials="JD" size="40"></b-avatar>
+
+                    <br><br>
+                    <b-label divider>Custom Color</b-label><br>
                     <b-avatar initials="KJ" bgd="#E91E63" size="40"></b-avatar>
+
+                    <br><br>
+                    <b-label divider>Gravatar and Img url</b-label><br>
                     <b-avatar gravatar="6bd69795f929a40746cdf026a03b703e" size="40"></b-avatar>
-                    <b-avatar url="https://i.imgur.com/6QKG2AG.png" size="40"></b-avatar>
+                    <b-avatar url="https://i.imgur.com/6QKG2AG.png" size="40" shadow></b-avatar>
+
                 </section>
 
                 <section title="Spinner">
@@ -341,6 +407,37 @@
                         })
                     </script>
                 </section>
+
+
+                <section title="Misc">
+                    <h1>Misc</h1>
+                    
+                    <h3>Sub(dued) text</h3>
+                    <b-sub>Smaller subdued text</b-sub>
+
+                    <p>Normal text <b-sub>with smaller</b-sub></p>
+
+                    <br><h3>Line/divider/hr</h3>
+
+                    <b-hr></b-hr>
+                    Vertical <b-hr vert></b-hr> Divider 
+                    <b-hr short></b-hr>
+
+                    <br><h3>Timer</h3>
+                    <b-timer running></b-timer>
+
+                    <br><br><h3>Embed</h3>
+                    <b-embed url="https://www.youtube.com/watch?v=sK1ODp0nDbM"></b-embed>
+
+                    <br><h3>Carousel</h3>
+                    <b-carousel>
+                        <div><b-paper color="gray" block>Slide 1</b-paper></div>
+                        <div><b-paper color="gray" block>Slide 2</b-paper></div>
+                        <div><b-paper color="gray" block>Slide 3</b-paper></div>
+                    </b-carousel>
+
+                </section>
+
 
                 <section title="Icons">
                     <h1>Icons</h1>
