Improving mobile support
- removed some hover states so click events are immediate
- updated demo for mobile too

--- a/demo/index.html
+++ b/demo/index.html
@@ -46,7 +46,7 @@
         <b-paper compact>
             <b-tabs key="main" style="padding-top: 1em">
 
-            <span slot="menu:after" style="margin: 0 .75em 0 auto; display: flex; align-items: center;" >
+            <span slot="menu:after">
                 <b-btn pill color="black" onclick="location='https://www.npmjs.com/package/blackstone-ui'">Install</b-btn>
                 &nbsp;&nbsp;
                 <b-btn pill color="blue" onclick="location='./docs'">Documentation</b-btn>
@@ -497,9 +497,9 @@
         </b-tabs></b-paper>
 
         <br><br>
-        <div>
+        <footer>
             <b-sub>Built by Blackstone Publishing</b-sub>
-        </div>
+        </footer>
         <br><br>
         
 
