Docs/demo updated

--- a/demo/index.html
+++ b/demo/index.html
@@ -387,6 +387,22 @@
                     <b-label badge="red">1</b-label>&nbsp;
                     <b-label badge="red">24</b-label>&nbsp;
 
+
+                    <br><br>
+
+                    <br><br>
+                    <h1>Ribbon</h1>
+
+                    <b-paper style="height: 120px">
+                        <b-ribbon>Ribbon</b-ribbon>
+                        <b-empty-state>Default</b-empty-state>
+                    </b-paper>
+
+                    <b-paper style="height: 140px">
+                        <b-ribbon pos="right" style="--color:var(--pink);font-size:1.4em;">Ribbon</b-ribbon>
+                        <b-empty-state>Right, color and size change</b-empty-state>
+                    </b-paper>
+
                 </section>
 
                 <section title="Avatar">
