b-btn: adding “stacked” style

--- a/demo/index.html
+++ b/demo/index.html
@@ -337,10 +337,20 @@
                         <b-btn text color="blue">Blue</b-btn>
                         <b-btn text color="red">Red</b-btn>
                         <b-btn text color="green">Green</b-btn>
+
+                        <b-hr vert></b-hr>
+
+                        <b-btn text icon="user">With Icon</b-btn>
+                        <b-btn text icon="cog"></b-btn>
                     </div>
 
-                    <br><br><br>
-                    <div><b-icon name="info-circled"></b-icon> See list of all icons down below</div>
+                    <br><br><b-label divider>Stacked style</b-label><br>
+                    <div>
+                        <b-btn text stacked icon="cog"><span>Settings</span></b-btn>
+                        <b-btn text stacked icon="user"><span>Account</span></b-btn>
+                        <b-btn text stacked icon="download"><span>Download</span></b-btn>
+                        <b-btn text stacked icon="upload-cloud"><span>Upload</span></b-btn>
+                    </div>
                 </section>
 
 
