Adding `ts` element for displaying (and updating) timestamps

--- a/demo/index.html
+++ b/demo/index.html
@@ -544,6 +544,9 @@
 
                     <p>Normal text <b-sub>with smaller</b-sub></p>
 
+                    <br><h2>Timestamp</h2>
+                    <p>Element created <b-ts .date=${moment()}></b-ts></p>
+
                     <br><h2>Line/divider/hr</h2>
 
                     <b-hr></b-hr>
