btn: add “floating action btn” style
Defaults to bottom right absolute position as that’s primarily how it should be used

--- a/demo/index.html
+++ b/demo/index.html
@@ -376,6 +376,13 @@
                         <b-btn text stacked icon="upload-cloud"><span>Upload</span></b-btn>
                     </div>
 
+                    <br><br><b-label divider>Floating Action Button</b-label><br>
+                    <div>
+                        <b-btn fab color="blue" icon="plus" style="position:static;"></b-btn>
+                        <b-btn fab icon="cog" style="position:static;"></b-btn>
+                        <b-btn fab color="gray" icon="download" style="position:static;"></b-btn>
+                    </div>
+
                     <br><br>
                     <h1>Button Group</h1>
 
