Docs/demo fix for file-icon chnage

--- a/demo/index.html
+++ b/demo/index.html
@@ -589,9 +589,17 @@
 
                     <br><br>
                     <h1>File Icon</h1>
-                    <b-file-icon ext="jpg" style="--size:4em"></b-file-icon>
                     <b-file-icon ext="pdf" style="--size:4em"></b-file-icon>
-                    <b-file-icon ext="doc" style="--size:4em"></b-file-icon>
+                    <b-file-icon ext="docx" style="--size:4em"></b-file-icon>
+                    <b-file-icon ext="xlsx" style="--size:4em"></b-file-icon>
+                    <b-file-icon ext="psd" style="--size:4em"></b-file-icon>
+                    <b-file-icon ext="indd" style="--size:4em"></b-file-icon>
+                    <b-file-icon ext="ai" style="--size:4em"></b-file-icon>
+                    <b-file-icon ext="mp3" style="--size:4em"></b-file-icon>
+                    <b-file-icon ext="mp4" style="--size:4em"></b-file-icon>
+                    <b-file-icon ext="html" style="--size:4em"></b-file-icon>
+                    <b-file-icon ext="xml" style="--size:4em"></b-file-icon>
+                    <b-file-icon ext="zip" style="--size:4em"></b-file-icon>
                 </section>
 
             </b-tabs>
