docs/demo update

--- a/demo/index.html
+++ b/demo/index.html
@@ -213,19 +213,19 @@
                     <h1>Panels</h1>
 
                     <div>
-                        <a href="/#/view-1" onclick="openView(this)">Default Panel view</a>
+                        <a href="view-1" onclick="openView(this)">Default Panel view</a>
                     </div><br>
 
                     <div>
-                        <a href="/#/view-2-small" onclick="openView(this)">Custom sizing and anchor</a>
+                        <a href="view-2-small" onclick="openView(this)">Custom sizing and anchor</a>
                     </div><br>
 
                     <div>
-                        <a href="/#/view-3" onclick="openView(this)">Inside another view</a>
+                        <a href="view-3" onclick="openView(this)">Inside another view</a>
                     </div><br>
 
                     <div>
-                        <a href="/#/view-animate" onclick="openView(this)">Animate</a>
+                        <a href="view-animate" onclick="openView(this)">Animate</a>
                     </div><br>
 
                     <div>
