docs/demo update

--- a/demo/index.html
+++ b/demo/index.html
@@ -49,7 +49,7 @@
             <span slot="menu:after">
                 <b-btn pill color="black" onclick="location='https://www.npmjs.com/package/blackstone-ui'">Install</b-btn>
                 &nbsp;&nbsp;
-                <b-btn pill color="blue" onclick="location='./docs'">Documentation</b-btn>
+                <b-btn pill color="blue" onclick="location='/docs'">Documentation</b-btn>
             </span>
 
             <h2 slot="menu:Presenters"><b-icon name="window"></b-icon>Presenters</h2>
