Notif: docs/demo update; minor bug fixes; some additional improvements

--- a/demo/index.html
+++ b/demo/index.html
@@ -234,6 +234,11 @@
 
                 </section>
 
+                <section title="Notif">
+                    <h1>Notif</h1>
+                    <notif-demo></notif-demo>
+                </section>
+
                 <section title="Tabs">
                     <h1>Tabs</h1>
 
