Form Control: add "center align" to rich text editor - may want to add all alignments, but center and default is enough for now

--- a/elements/icons.svg.html
+++ b/elements/icons.svg.html
@@ -1113,5 +1113,8 @@
 <symbol id="icon-height" viewBox="0 0 24 24">
 <path d="M12.984 6.984v10.031h3l-3.984 3.984-3.984-3.984h3v-10.031h-3l3.984-3.984 3.984 3.984h-3z"></path>
 </symbol>
+<symbol id="icon-paragraph-center" viewBox="0 0 32 32">
+<path d="M0 2h32v4h-32zM6 8h20v4h-20zM6 20h20v4h-20zM0 14h32v4h-32zM0 26h32v4h-32z"></path>
+</symbol>
 </defs>
 </svg>
