--- a/elements/icons.svg.html
+++ b/elements/icons.svg.html
@@ -1116,5 +1116,6 @@
 <symbol id="icon-paragraph-center" viewBox="0 0 32 32">
 <path d="M0 2h32v4h-32zM6 8h20v4h-20zM6 20h20v4h-20zM0 14h32v4h-32zM0 26h32v4h-32z"></path>
 </symbol>
+<symbol viewBox="0 0 126.62 188.42" id="icon-blackstone"><g style="fill:currentColor;"><g><path d="M10.74,7.1c13.2-11.54,67.06-9.34,91.22,9,26.1,19.84,23,55.15-10.4,70C58.68,100.82,15.41,110.5,5.79,73.75-5,32.53.83,15.78,10.74,7.1Z"/><path d="M126.62,139.29c-.19,42.87-26.55,46.48-58.42,48.35-39.92,2.35-56.14,1-59.76-26.42-3.35-25.31,8.51-37,50.23-51.35C113.14,91.08,126.76,107.25,126.62,139.29Z"/></g></g></symbol>
 </defs>
 </svg>
