Update demo/docs; add manifest and SW to demo; update readme

--- a/demo/index.html
+++ b/demo/index.html
@@ -7,13 +7,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1,user-scalable=0"/>
     <meta name="HandheldFriendly" content="true" />
     
-    <link rel="icon" type="image/png" sizes="32x32" href="./favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="./favicon/favicon-96x96.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="./favicon/favicon-16x16.png">
-    <link rel="shortcut icon" href="./favicon/favicon.ico?v2">
+    <link rel="icon" type="image/png" sizes="32x32" href="./imgs/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="./imgs/favicon/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./imgs/favicon/favicon-16x16.png">
+    <link rel="shortcut icon" href="./imgs/favicon/favicon.ico?v2">
+
+    
 
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="style.less">
+    <link rel="manifest" href="/pwa.webmanifest">
     <script src='./index.js'></script>
 </head>
 <body>
