Update demo for iOS install

--- a/demo/index.html
+++ b/demo/index.html
@@ -11,8 +11,7 @@
     <link rel="icon" type="image/png" sizes="96x96" href="./imgs/favicon/favicon-96x96.png">
     <link rel="icon" type="image/png" sizes="16x16" href="./imgs/favicon/favicon-16x16.png">
     <link rel="shortcut icon" href="./imgs/favicon/favicon.ico?v2">
-
-    
+    <link rel="apple-touch-icon" href="./imgs/icon-square.jpg">
 
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="style.less">
