--- a/demo/index.html
+++ b/demo/index.html
@@ -4,7 +4,7 @@
     <meta name="apple-mobile-web-app-title" content="Blackstone UI">
     <meta http-equiv="cleartype" content="on" />
     <meta name="MobileOptimized" content="width" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1,user-scalable=0"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, viewport-fit=cover, user-scalable=no">
     <meta name="HandheldFriendly" content="true" />
     
     <link rel="icon" type="image/png" sizes="32x32" href="./imgs/favicon/favicon-32x32.png">
