--- a/demo/index.html
+++ b/demo/index.html
@@ -6,6 +6,7 @@
     <meta name="MobileOptimized" content="width" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, viewport-fit=cover, user-scalable=no">
     <meta name="HandheldFriendly" content="true" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     
     <link rel="icon" type="image/png" sizes="32x32" href="./imgs/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="96x96" href="./imgs/favicon/favicon-96x96.png">
